# FreeImage

./: CMakeLists.txt  cxx_flag_overrides.cmake
Source/: CMakeLists.txt  FreeImage.h  Plugin.h
Source/FreeImage/: Plugin.cpp  PluginG3.cpp  PluginJPEG.cpp  PluginPNG.cpp  PluginTIFF.cpp
Source/FreeImageToolkit/: JPEGTransform.cpp
Source/LibJPEG/: CMakeLists.txt  jmorecfg.h
Source/LibMNG/: CMakeLists.txt
Source/LibOpenJPEG/: CMakeLists.txt
Source/LibPNG/: CMakeLists.txt
Source/LibRawLite/: CMakeLists.txt
Source/LibTIFF/: tif_jpeg.c
Source/LibTIFF4/: CMakeLists.txt  tif_config.h  tif_config.vc.h  tif_jpeg.c  tif_ojpeg.c
Source/LibWebP/: CMakeLists.txt
Source/Metadata/: XTIFF.cpp
Source/OpenEXR/: CMakeLists.txt
Source/OpenEXR/IlmImf/: ImfAcesFile.cpp  ImfOutputFile.cpp  ImfScanLineInputFile.cpp  ImfTiledMisc.cpp  ImfTiledOutputFile.cpp
Source/OpenEXR/Imath/: ImathMatrixAlgo.cpp
Source/ZLib/: CMakeLists.txt
TestAPI/: CMakeLists.txt
